fixed hover on mobile bug

--- a/src/components/QuizCard.module.css
+++ b/src/components/QuizCard.module.css
@@ -1,4 +1,3 @@
-
 .card{
   width: 100%;
   height: 80%;
@@ -30,10 +29,15 @@
   align-items: center;
   justify-content: center;
 }
+
+
 .option:hover {
   background-color: #5A5A5A;
 }
 
-.option:focus {
-  outline: none;
+
+@media (max-width: 600px) {
+  .option:hover {
+    background-color: inherit;
+  }
 }
